[project]
name = "longcat-xcode-bridge"
version = "0.1.0"
description = "A lightweight proxy server that makes the LongCat API compatible with Xcode's local AI model feature."
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE" }
authors = [
  { name="OleksiyM", email="oleksiymaliovanyy@gmail.com" }
]
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "httpx>=0.27",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Utilities",
]

[tool.uv]
package = false